improved the design added icons and name can now handle whitespaces correctly

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,28 +7,35 @@
 }
 
 nav{
+
     background-color: #172236;
     width: 100%;
-    height: 50px
+    height: 50px;
+    display:flex;
+    justify-content: center;
     
 }
 
 .inputBox{
-    background-color: #1E2C46;
+    background-color: #2d3a52;
     height: 25px;
     margin: 10px;
     width: 200px;
     margin-right: 5px;
     border-radius: 10px;
     border: none;
+    color: whitesmoke;
+    padding: 2px;
+    padding-left: 4px;
 }
 
 .submit{
    background-color: #008000; 
    border: none;
    border-radius: 3px;
-   height: 20px;
-   width: 30px;
+   height: 25px;
+   width: 35px;
+   color: whitesmoke;
 
 }
 
@@ -36,6 +43,8 @@ nav{
     height: 100vh;
     background-color: #1E2C46;
     color: whitesmoke;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .temp{
@@ -57,4 +66,17 @@ position: relative;
     margin-left: 4rem;
     font-size: 40px;
 
+}
+
+.icon{
+    /* background-color: #008000; */
+    height: 600px;
+    width: 600px;
+    margin-left: 17rem;
+    margin-top: 4rem;
+    filter: invert(100%);
+}
+
+html{
+    overflow-y: hidden;
 }
